# image-workflow

./: .gitignore  .tool-versions  common.sh  iw_add_thumbnails.sh  iw_compress_tiffs.sh  iw_convert_format.sh  iw_extract_thumbnails.sh  iw_generate_html_gallery.sh  iw_remove_generated_thumbnails.sh  pyproject.toml
image_workflow/: add_thumbnails.py  common.py  compress_tiffs.py  convert_format.py  extract_thumbnails.py  generate_html_gallery.py  remove_thumbnails.py
test_images/: test_thumb.tif
tests/: test_common.py  test_gallery.py  test_metadata_preservation.py  test_tiff_workflow.py
